k8s-1/deploy/00-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: shortener
